--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# gdl = {version = "0.2.2", path = "../nom-gdl" }
-gdl = "0.2.3"
+gdl = {version = "0.2.3", optional = true}
 
 [dev-dependencies]
 trim-margin = "0.1.0"
